--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,12 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.8",
+    "@tailwindcss/vite": "^4.1.8",
     "@vuepic/vue-datepicker": "^11.0.1",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
+    "chart.js": "^4.4.9",
     "crypto-js": "^4.2.0",
     "dayjs": "^1.11.13",
     "express": "^4.21.2",
@@ -23,10 +26,10 @@
     "jwt-decode": "^4.0.0",
     "pinia": "^2.3.1",
     "pinia-plugin-persistedstate": "^4.2.0",
-    "postcss": "^8.5.1",
     "socket.io-client": "^4.8.1",
-    "tailwindcss": "3.4.17",
+    "tailwindcss": "^4.1.8",
     "vue": "^3.5.13",
+    "vue-chartjs": "^5.3.2",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
@@ -44,12 +47,17 @@
     "eslint-plugin-vue": "^9.32.0",
     "jiti": "^2.4.2",
     "npm-run-all2": "^7.0.2",
-    "postcss": "^8.5.1",
+    "postcss": "^8.5.4",
     "prettier": "^3.4.2",
     "sass-embedded": "^1.83.4",
     "typescript": "~5.7.3",
     "vite": "^6.0.11",
     "vite-plugin-vue-devtools": "^7.7.0",
     "vue-tsc": "^2.2.0"
-  }
+  },
+  "main": "tailwind.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
