--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,7 +31,8 @@
     "tailwindcss": "^4.1.8",
     "vue": "^3.5.13",
     "vue-chartjs": "^5.3.2",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vue3-toastify": "^0.2.8"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
