--- a/api/package.json
+++ b/api/package.json
@@ -35,7 +35,9 @@
     "mysql2": "^3.12.0",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.10.0",
+    "pdfkit": "^0.17.1",
     "reflect-metadata": "^0.2.2",
+    "swissqrbill": "^4.2.0",
     "typeorm": "^0.3.20",
     "utf8": "^3.0.0",
     "winston": "^3.17.0",
@@ -60,6 +62,7 @@
     "@types/node": "^22.10.5",
     "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.17",
+    "@types/pdfkit": "^0.13.9",
     "@types/qs": "^6.9.17",
     "@types/utf8": "^3.0.3",
     "@typescript-eslint/eslint-plugin": "^8.19.1",
